# Computer-Git-Repos-Hash

./: Makefile  README.md  main.py  pyproject.toml  repo_utils.py
tests/: __init__.py  tests_project.py
