[tool.poetry]
name = "computer_git_hash"
version = "0.0.1"
description = "Project description"
authors = ["John Doe <doe@example.net>", "Radium, LLC"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.33.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sentry-sdk = "^1.5.0"
pydantic = "^2.5.2"
httpx = "^0.25.0"
asyncpg = "^0.29.0"
starlette-htmx = "^0.1.1"
aiofiles = "^24.1.0"
aiohttp = "^3.9.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pytest-xdist = {extras = ["psutil"], version = "^3.5.0"}
pytest-mock = "^3.6.1"
pytest-snapshot = "^0.9.0"
#pytest-httpx = "^0.27.0"
Faker = "^20.1.0"
asgi-lifespan = "^2.1.0"
aioresponses= "^0.7.6"
pytest-asyncio = "^0.23.7"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
flake8-pytest-style = "^1.7.2"
flake8-annotations = "^3.0.1"
flake8-logging-format = "^0.9.0"
flake8-spellcheck = "^0.28.0"
isort = "^5.7.0"


[build-system]
requires = ["poetry>=0.12"]
build-cpms = "poetry.masonry.api"

[tool.nitpick]
style = "https://gitea.radium.group/radium/project-configuration/raw/branch/master/nitpick/all.toml"

[tool.pytest.ini_options]
testpaths = [
	"tests",
]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
